force-app/main/default/objects/Matter_Update__c/Matter_Update__c.object-meta.xml
<CustomObject>
    <label>Matter Update</label>
    <nameField>
        <displayFormat>MU-{00000}</displayFormat>
        <label>Matter Update Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matter Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>