force-app/main/default/objects/Matter_Update__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matter Updates</relationshipLabel>
    <relationshipName>Matter_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>