force-app/main/default/objects/Matter_Update__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Legal_Advocacy_Team</valueSetName>
    </valueSet>
</CustomField>