force-app/main/default/objects/Matter_Update__c/fields/Box_Link__c.field-meta.xml
<CustomField>
    <fullName>Box_Link__c</fullName>
    <label>Box Link</label>
    <type>Url</type>
</CustomField>