force-app/main/default/objects/Matter_Update__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matter Updates</relationshipLabel>
    <relationshipName>Matter_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>