force-app/main/default/objects/Matter_Update__c/fields/FIR_Case__c.field-meta.xml
<CustomField>
    <fullName>FIR_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FIR Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Matter Updates</relationshipLabel>
    <relationshipName>Matter_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>