force-app/main/default/objects/Matter_Update__c/fields/Matter_Update__c.field-meta.xml
<CustomField>
    <fullName>Matter_Update__c</fullName>
    <label>Matter Update</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Practice_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Review</fullName>
            </value>
            <value>
                <fullName>Depositions</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Drafting</fullName>
            </value>
            <value>
                <fullName>Drafting (Amicus)</fullName>
            </value>
            <value>
                <fullName>Drafting (Legislation)</fullName>
            </value>
            <value>
                <fullName>Expert Witness</fullName>
            </value>
            <value>
                <fullName>Filing</fullName>
            </value>
            <value>
                <fullName>Hearings (Civil Litigation)</fullName>
            </value>
            <value>
                <fullName>Hearings (Criminal)</fullName>
            </value>
            <value>
                <fullName>Legal Review - Comprehensive</fullName>
            </value>
            <value>
                <fullName>Legal Review - Limited Purpose</fullName>
            </value>
            <value>
                <fullName>Lobbying</fullName>
            </value>
            <value>
                <fullName>Meetings (Amicus)</fullName>
            </value>
            <value>
                <fullName>Meetings (Civil Litigation)</fullName>
            </value>
            <value>
                <fullName>Meetings (Criminal)</fullName>
            </value>
            <value>
                <fullName>Meetings (Legislation)</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Review Filing</fullName>
            </value>
            <value>
                <fullName>Trial (Civil Litigation)</fullName>
            </value>
            <value>
                <fullName>Trial (Criminal)</fullName>
            </value>
            <value>
                <fullName>Drafting (Criminal, non-FIR)</fullName>
                <isActive>false</isActive>
                <label>Drafting (Criminal, non-FIR)</label>
            </value>
            <value>
                <fullName>Research (Amicus)</fullName>
                <isActive>false</isActive>
                <label>Research (Amicus)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>