force-app/main/default/objects/Matter_Update__c/fields/Matter_Update_Type__c.field-meta.xml
<CustomField>
    <fullName>Matter_Update_Type__c</fullName>
    <label>Matter Update Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Matter_Update__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bench</fullName>
            </value>
            <value>
                <fullName>Briefs</fullName>
            </value>
            <value>
                <fullName>Case Review</fullName>
            </value>
            <value>
                <fullName>Complainant</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Correspondence</fullName>
            </value>
            <value>
                <fullName>Court</fullName>
            </value>
            <value>
                <fullName>Depositions</fullName>
            </value>
            <value>
                <fullName>Fact Sheets</fullName>
            </value>
            <value>
                <fullName>Initial Disclosures</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Interrogatories</fullName>
            </value>
            <value>
                <fullName>Jury</fullName>
            </value>
            <value>
                <fullName>Jury Selection</fullName>
            </value>
            <value>
                <fullName>Law Enforcement</fullName>
            </value>
            <value>
                <fullName>Legislation</fullName>
            </value>
            <value>
                <fullName>Legislator</fullName>
            </value>
            <value>
                <fullName>Memo</fullName>
            </value>
            <value>
                <fullName>Motions</fullName>
            </value>
            <value>
                <fullName>Opposing Counsel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Outside Counsel</fullName>
            </value>
            <value>
                <fullName>Party</fullName>
            </value>
            <value>
                <fullName>Pleadings</fullName>
            </value>
            <value>
                <fullName>Potential Plaintiff</fullName>
            </value>
            <value>
                <fullName>Prep</fullName>
            </value>
            <value>
                <fullName>Pretrial</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Prosecutor</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>