force-app/main/default/objects/Matter_Update__c/fields/Matter_Update_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Matter_Update_Type_Other__c</fullName>
    <inlineHelpText>Fill this out if Matter Update Type is &quot;Other&quot;</inlineHelpText>
    <label>Matter Update Type - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>