force-app/main/default/objects/Matter_Update__c/fields/Practice_Area__c.field-meta.xml
<CustomField>
    <fullName>Practice_Area__c</fullName>
    <label>Practice Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amicus</fullName>
            </value>
            <value>
                <fullName>Civil Litigation</fullName>
            </value>
            <value>
                <fullName>Criminal</fullName>
            </value>
            <value>
                <fullName>Legislation</fullName>
            </value>
            <value>
                <fullName>Tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>