force-app/main/default/objects/Matter_Update__c/fields/Update_Summary__c.field-meta.xml
<CustomField>
    <fullName>Update_Summary__c</fullName>
    <label>Update Summary</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>